fix wrap

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,21 +16,22 @@ a {
 
 .app-container {
     display: flex;
+    flex-direction: row;
     height: 100vh;
+    width: 100vw;
 }
 
 .image-container {
-    width: 50vw;
+    width: 50%;
     background-position: center;
     background-size: cover;
-    background-origin: cent
 }
 
 .main-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
+    width: 50%;
     max-height: 100vh;
     color: #fefefe;
     overflow: auto;
@@ -69,7 +70,7 @@ a {
     justify-content: flex-end;
     justify-self: flex-start;
     width: 100%;
-    min-height: 5vh;
+    min-height: 5%;
 }
 
 #portfolio-container {
@@ -127,9 +128,16 @@ a {
 @media only screen and (max-width: 1055px) {
     .app-container {
         flex-wrap: wrap;
+        overflow: auto;
     }
     
     .image-container {
-        width: 100%;
+        width: 100vw;
+        height: 50%;
+    }
+
+    .main-container {
+        width: 100vw;
+        height: 50%;
     }
 }
